--- a/web/src/components/DropdownMenu/styles.css
+++ b/web/src/components/DropdownMenu/styles.css
@@ -1,6 +1,7 @@
 @import '../../root-setup.css';
 
 .dropdown {
+    box-sizing: content-box;
     position: absolute;
     top: 58px;
     width: 300px;
@@ -33,7 +34,9 @@
 }
 
 .menu {
-    width: 100%
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .menu-primary-enter {
@@ -57,6 +60,10 @@
 
 .menu-secondary-enter {
     transform: translatex(110%);
+}
+
+.menu-secondary-exit {
+    position: absolute;
 }
 
 .menu-secondary-enter-active {
