--- a/web/src/pages/main/styles.css
+++ b/web/src/pages/main/styles.css
@@ -36,24 +36,12 @@
 }
 
 .articles-list article a {
-    height: 42px;
-    border-radius: 5px;
-    border: 2px solid var(--bg);
-    background: none;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     color: var(--bg);
     font-weight: bold;
     font-size: 16px;
     text-decoration: none;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s;
-}
-
-.articles-list article a:hover {
-    background:var(--bg);
-    color: #fff
 }
 
 .articles-list .actions {
